# autocusis

./: .gitignore  LICENSE  README.md  pyproject.toml
autocusis/: __init__.py  calendar.py  cli.py  data_commands.py  db.py  models.py  paths.py  profile.py  reports.py  services.py
autocusis/ingest/: __init__.py  availability_commands.py  availability_store.py  catalog_scraper.py  commands.py  community_catalog.py  community_sync.py  data_update.py  enrollment.py  pdf_fetcher.py  pdf_parser.py  prereq.py  term_extrapolate.py  term_normalize.py  timetable_scraper.py
autocusis/reports/: __init__.py  bundle.py  commands.py  context.py  html.py  ics.py  markdown.py  svg.py  term_dates.py  timetable_grid.py
autocusis/requirements/: __init__.py  commands.py  engine.py  schema.py
autocusis/scheduler/: __init__.py  commands.py  plan.py  section_constraints.py  section_data.py  service.py  solver.py
autocusis/sections/: __init__.py  bundle_builder.py  commands.py  conflict.py  db.py  models.py  (+4 more)
data/: availability.yaml  profile.yaml  sample-schedules-2025-26-t2.json  ugea_language.json
docs/: community-data-adapter-design.md  competitor-analysis.md
scripts/: process_catalog_scrape.py
tests/: test_calendar.py  test_community_sync.py  test_engine.py  test_enrollment.py  test_parser.py  test_pdf_fetcher.py  test_prereq.py  test_profile.py  test_report_bundle.py  test_report_command.py  test_report_ics.py  test_report_markdown.py  test_report_svg.py  test_section_orchestrator.py  test_section_solver.py  test_solver.py  test_term_extrapolate.py  test_timetable_grid.py
(+262 files in other folders)
