[project]
name = "autocusis"
version = "0.1.0"
description = "AutoCUSIS - CUHK academic progress planner & study-scheme optimizer"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ortools>=9.14",
    "pdfplumber>=0.11",
    "pypdf>=5.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
scrape = ["playwright>=1.44"]

[project.scripts]
autocusis = "autocusis.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "autocusis",
    "autocusis.ingest",
    "autocusis.ingest.adapters",
    "autocusis.requirements",
    "autocusis.scheduler",
    "autocusis.sections",
]

[tool.setuptools.package-data]
autocusis = ["py.typed"]
